# FL-2026

./: .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DUPLICATE_ANALYSIS_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_ENTERPRISE.md  VENDOR_REORGANIZATION.md  VENV_SETUP.md  activate.sh  check_aapl_status.py  docker-compose.yml  finloom.py  inspect_fresh_db.py  pyproject.toml  pyrightconfig.json  requirements-minimal.txt  requirements.txt
Not_using/docs/archive/: IMPLEMENTATION_PROGRESS.md  INDUSTRY_GRADE_SUMMARY.md  INVESTIGATION_COMPLETE.md  INVESTIGATION_REPORT.md  UNSTRUCTURED_IMPLEMENTATION_COMPLETE.md  extraction_status.md
Not_using/src/business/: industry_classifier.py
Not_using/src/display/: template_engine.py
Not_using/src/reliability/: graceful_degradation.py
Not_using/src/utils/: circuit_breaker.py  retry.py
config/: logging.yaml  settings.development.yaml  settings.production.yaml  settings.staging.yaml  settings.yaml
data/: finloom.dev.duckdb
data/checkpoints/: download_0000002488.json  download_0000019617.json  download_0000050863.json  download_0000051143.json  download_0000070858.json  download_0000072971.json  download_0000104169.json  download_0000320193.json  download_0000354950.json  download_0000789019.json  download_0000858877.json  download_0000886982.json  download_0001018724.json  download_0001045810.json  download_0001067983.json  download_0001318605.json  download_0001326801.json  download_0001341439.json  download_0001652044.json  download_0001744489.json
docs/: ARCHITECTURE.md  INDUSTRY_GRADE_PLAN.md  RAG_INTEGRATION.md  REPOSITORY_PATTERN.md  UNSTRUCTURED_DATA_GUIDE.md
migrations/: 001_unstructured_schema.py  README.md
scripts/: 01_backfill_historical.py  02_daily_update.py  03_backup_to_s3.py  04_generate_dashboard.py  README.md  assess_quality.py  backup_manager.py  build_passage_graph.py  check_data_duplicates.py  check_duplicates.py  clean_duplicates.py  cron_setup.sh  duplicate_report.py  inspect_db.py  inspect_main_db.py  normalize_all.py  perf_test.py  quick_check.py  quick_duplicate_check.py  reparse_all.py  seed_mappings.py  test_hybrid_search.py  validate_normalized.py  verify_system.py  view_normalized.py
scripts/analysis/: compare_companies.py  view_company.py
scripts/archive/: migrate_unstructured_schema.py  reprocess_for_tables.py  reprocess_missing_sections.py  test_idempotency.py  test_parser.py
scripts/extraction/: check_data_health.py  extract_tables_only.py  extract_unstructured.py  extract_with_staging.py  validate_extraction.py
scripts/pipelines/: add_llm_extraction_parallel.py  backfill_data.py  build_knowledge_graph.py  detect_and_summarize_communities.py  extract_entities_from_filings.py
scripts/setup/: init_neo4j_schema.py
scripts/utilities/: backfill_filing_sections.py
src/: __init__.py
src/agents/: __init__.py  __main__.py  agent.py  context.py  prompts.py  tools.py
src/business/: __init__.py  concept_mapper.py
src/caching/: __init__.py  redis_cache.py
src/checks/: data_quality.py  schemas.py
src/config/: __init__.py  env_config.py  extraction_config.py
src/core/: __init__.py  base_types.py  exceptions.py  repository.py
src/display/: __init__.py  tree_builder.py
src/documents/: __init__.py  document_processor.py
src/downloads/: __init__.py  __main__.py  cli.py  downloader.py  sec_api.py
src/extraction/: __init__.py  entity_extractor.py  llm_section_finder.py  section_retriever.py
src/graph/: __init__.py  __main__.py  cli.py  cli_communities.py  community_detection.py  find_communities.py  graph_builder.py  graph_connector.py  neo4j_client.py  schema.py  summarization.py  xbrl_importer.py
src/infrastructure/: __init__.py  config.py  logger.py  request_throttle.py
src/ingestion/: __init__.py  async_downloader.py  downloader.py  metadata.py  sec_api.py
src/monitoring/: __init__.py  alerts.py  circuit_breaker.py  health.py  health_checker.py  tracing.py
src/parsers/: __init__.py  footnote_parser.py  section_parser.py  table_parser.py  xbrl_parser.py
src/processing/: __init__.py  chunker.py  unstructured_pipeline.py
src/readers/: __init__.py  __main__.py  ai_reader.py  cli.py  cli_llm.py  entity_checks.py  entity_finder.py  section_extractor.py  section_finder.py  xbrl_reader.py
src/retrieval/: __init__.py  __main__.py  graph_search.py  hoprag_retriever.py  hybrid_search.py  index_meilisearch.py  keyword_search.py  llm_pruning.py  passage_graph.py  pseudo_query_generator.py  query_router.py  reranker.py  vector_search.py
src/security/: audit_log.py
src/splitter/: __init__.py  __main__.py  cli.py  split_models.py  text_splitter.py
src/storage/: __init__.py  analytics.py  company_repository.py  connection.py  connection_pool.py  database.py  fact_repository.py  filing_repository.py  merge_coordinator.py  normalization.py  partitioning.py  repositories.py  s3_backup.py  schema.sql  section_repository.py  staging_manager.py
src/utils/: __init__.py  config.py  logger.py  rate_limiter.py
src/validation/: __init__.py  data_quality.py  quality_scorer.py  reconciliation.py
src/vectors/: __init__.py  __main__.py  cli.py  embedding_client.py  vector_store.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_integration_quality.py  test_parsers.py  test_rate_limiter.py  test_validation.py
